--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" href="#">Find</a>
+            <a class="nav-link" href="find.html">Find</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">About</a>
