--- a/find.html
+++ b/find.html
@@ -31,7 +31,10 @@
       </div>
     </nav>
     <div id="map"></div>
-    
+    <br>
+    <div id="cont" class="container">
+      <h6>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Risus commodo viverra maecenas accumsan lacus vel facilisis volutpat. Justo laoreet sit amet cursus sit amet dictum.</h6>
+    </div>
     <script type="text/javascript" src="./js/find.js"></script>
     <script type="text/javascript" src="./js/jquery.min.js"></script>
     <script type="text/javascript" src="./js/jquery-ui.min.js"></script>
