--- a/find.html
+++ b/find.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.css" />
     <link href="https://fonts.googleapis.com/css?family=Permanent+Marker" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
+    <link rel="stylesheet" href="./css/css3clock.css" />
     <link rel="stylesheet" href="./css/find.css" />
   </head>
   <body>
@@ -22,7 +23,7 @@
             <a class="nav-link active" href="find.html">Find</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">About</a>
+            <a class="nav-link" href="time.html">Time</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Contact</a>
