--- a/find.html
+++ b/find.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.css" />
     <link href="https://fonts.googleapis.com/css?family=Permanent+Marker" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
-    <link rel="stylesheet" href="./css/css3clock.css" />
     <link rel="stylesheet" href="./css/find.css" />
   </head>
   <body>
@@ -34,15 +33,17 @@
     <div id="map"></div>
     <br>
     <div id="cont" class="container">
-      <h6>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Risus commodo viverra maecenas accumsan lacus vel facilisis volutpat. Justo laoreet sit amet cursus sit amet dictum.</h6>
+      <h6>Por favor, permita que su navegador para dar acceso a las ubicaciones para que podamos encontrar lugares cercanos para que usted pueda visitar.
+      </h6>
     </div>
 
-    <div id="pic">
-      
+    <div id="pic" data-animate="fadeInRight" data-duration="1.0s" data-delay="0.5s" >
+
     </div>
-    
-    <script type="text/javascript" src="./js/find.js"></script>
+
+
     <script type="text/javascript" src="./js/jquery.min.js"></script>
+    <script type="text/javascript" src="./js/find.js"></script>
     <script type="text/javascript" src="./js/jquery-ui.min.js"></script>
     <script type="text/javascript" src="./js/bootstrap.min.js"></script>
     <script type="text/javascript" src="./js/jquery.backstretch.js"></script>
