--- a/index.html
+++ b/index.html
@@ -38,17 +38,18 @@
       <div class="container row">
         <div class="col scrolla" data-animate="fadeInRight" data-duration="1.5s" data-delay="0.5s">
           <span class="fa-stack fa-lg fa-5x">
-            <i class="fa fa-circle fa-stack-2x"></i>
-            <i class="fa fa-location-arrow fa-stack-1x fa-inverse"></i>
+            <i id = "naviconanim" class="fa fa-circle fa-stack-2x"></i>
+            <i id = "navicon" class="fa fa-location-arrow fa-stack-1x fa-inverse"></i>
           </span>
-          <h6>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Risus commodo viverra maecenas accumsan lacus vel facilisis volutpat. Justo laoreet sit amet cursus sit amet dictum.</h6>
+          <h6>"turista" es una aplicación web y móvil compatible que permite a nuestros ciudadanos extranjeros conocer su entorno y saber a dónde ir.</h6>
         </div>
         <div class="col scrolla" data-animate="fadeInLeft" data-duration="1.5s" data-delay="0.5s">
           <span class="fa-stack fa-lg fa-5x">
             <i class="fa fa-circle fa-stack-2x"></i>
             <i class="fa fa-clock-o fa-stack-1x fa-inverse"></i>
           </span>
-          <h6>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Risus commodo viverra maecenas accumsan lacus vel facilisis volutpat. Justo laoreet sit amet cursus sit amet dictum.</h6>
+          <h6>"turista" también ofrece un Live 24/7 reloj en formato español que permite a las personas con formato Español reloj conocer la hora actual.
+          </h6>
         </div>
       </div>
     </div>
